k8s/apps/argo/httproutes.yaml
---
# argo-cd HTTPRoute (nonprod.argo.devths.com)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-nonprod
  namespace: argocd
spec:
  parentRefs:
    - name: devths-gateway
      namespace: nginx-gateway
  hostnames:
    - "nonprod.argo.devths.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
